--- a/org/2020-07-13-docker.org
+++ b/org/2020-07-13-docker.org
@@ -1,92 +1,18 @@
 #+TITLE: docker
 #+STARTUP: indent
-* Image
-** check
-docker images
-** obtain
-docker pull [imageName:[tag]]
-** search
-docker search [name]
-** delete
-docker rmi [imageId]
-** create
-*** from container
-docker commit -m "commit message" -a "author Name" [containerId] [imageName[:tag]]
-*** from Dockerfile
-**** format
-runoob@runoob:~$ cat Dockerfile 
-FROM    centos:6.7
-MAINTAINER      Fisher "fisher@sudops.com"
-
-RUN     /bin/echo 'root:123456' |chpasswd
-RUN     useradd runoob
-RUN     /bin/echo 'runoob:123456' |chpasswd
-RUN     /bin/echo -e "LANG=\"en_US.UTF-8\"" >/etc/default/local
-EXPOSE  22
-EXPOSE  80
-CMD     /usr/sbin/sshd -D
-**** build
-docker build -t [imageName[:tag]] [path of Dockerfile]
-** tag
-docker tag [containerId] [imageName[:tag]]
-* Container
-** start
-docker run -it ubuntu /bin/sh
-docker start [containerId]
-*** option
-**** -i
-交互
-**** -t
-进入终端
-**** -d
-daemon
-docker attach [containerId]
-docker exec -it [containerId] /bin/bash //不会退出时导致容器停止
-**** -P
-auto port map
-**** -p
-mannual setting
-**** --name
-不指定时，docker会自动生成，各类命令除了指定containerId也可以指定name
-specify name of container
-**** --network
-**** --hostname
-**** --dns
-**** -v
-目录映射
--v ~/nginx/www:/www
-** stop
-docker stop [containerId]
-** check
-*** docker ps
--a 看全部，默认看运行中的
-*** docker logs -f [containerId]
--f与tail类似，看deamon内的输出情况
-*** docker port [containerId]
-*** docker top [containerId]
-*** docket inspect [containerId]
-返回描述container整体的JSON文件
-** delete
-docker rm -f [containerId]
-** export and import
-docker export [containerId] > ubuntu.tar
- cat docker/ubuntu.tar | docker import - test/ubuntu:v1 // 导入成image
-** network
-docker network create -d bridge test-net
-docker network ls
-* Repository
-** service provider
+* Docker Registry
+Docker Registry contains many Repository
+** Repository
+*** service provider
 https://hub.docker.com official repo, free account can only have one private repo
-** account
+*** account
 docker login
 docker logout
-** push
+*** push
 // 如果镜像是魔改已经存在的，必须重新打tag，否则由于namespace不一致，无法上传
 docker tag [imageId] [username]/[iamgeName:[tag]]
 // 是否私有，得上网站进行设定，整体操作与GitHub类似
 docker push [username]/[imageName:[tag]]
-* Docker Registry
-Docker Registry contains many Repository
 * Dockerfile
 ** FROM
 FROM [imageName]
@@ -485,7 +411,10 @@ services:
             replicas: 1 # Scale down to 1 replica so you can test
 #+END_SRC
 ** config
-在yaml/cli中指定config之后，被读取的文件的内容作为实体被docker管理，尝试改源文件，并重新启动stack导致失败，必须清干净才能启动(或者新建文件名每次版本更变)
+*** file resources
+1. docker config在读取后，设置乐resource name和id标准当前的资源类型
+2. docker采用支持稳定依赖的资源管理形式(即如果被利用的文件资源被改了之后，该资源计算出来的id不一致，文件名不变，视为重新部署失败)
+3. 解决2的处理有两者，一种是主配置文件读取config时，被配置资源，在改动时，名字也改，从而规避依赖性问题，第二种是整个stack停掉，rm config，重开stack
 #+BEGIN_SRC yaml
 version: '3.7'
 
@@ -515,6 +444,24 @@ DEPLOY_ENV=dev docker stack deploy \
     --compose-file docker-compose.yml greetings_dev
 
 docker config
+*** secrets
+# 私钥
+cat api/config/insecure.key | \
+    docker secret create ch12_greetings-svc-prod-TLS_PRIVATE_KEY_V1 -
+vnyy0gr1a09be0vcfvvqogeoj
+docker secret inspect ch12_greetings-svc-prod-TLS_PRIVATE_KEY_V1
+docker config create \
+    ch12_greetings_svc-prod-TLS_CERT_V1 api/config/insecure.crt
+5a1lybiyjnaseg0jlwj2s1v5m
+# 公钥
+docker config create \
+    ch12_greetings_svc-prod-TLS_CERT_V1 api/config/insecure.crt
+
+# 启动
+DEPLOY_ENV=prod docker stack deploy \
+    --compose-file docker-compose.yml \
+    --compose-file docker-compose.prod.yml \
+    greetings_prod
 * pipeline
 ** all in one
 git clone https://github.com/dockerinaction/ch10_patterns-for-building-images.git 
@@ -532,6 +479,16 @@ docker top lamp-test
 docker container diff image-dev
 docker image history ubuntu-git:removed
 docker service inspect hello-world
+** Container
+*** check
+**** docker ps
+-a 看全部，默认看运行中的
+**** docker logs -f [containerId]
+-f与tail类似，看deamon内的输出情况
+**** docker port [containerId]
+**** docker top [containerId]
+**** docket inspect [containerId]
+返回描述container整体的JSON文件
 * share data
 ** local filesystems
 CONF_SRC=~/example.conf; \
@@ -708,7 +665,6 @@ docker container run -d --name ch6_ipc_consumer \
 ** portability
 1. 对于依赖于系统级别的软件分发，无法做到完全适配 
 2. docker原生运行在linux上（使用了linux），为windows和macos提供了各自特定的虚拟机
-
 ** pid namespace
 each container has its own namespace
 ** state
